Added new scripts for build and tests, added test environment, added license, added pagination, added metrics and more
